ClientLib/merrors.txt
mask1.cpp: In function ‘int show_mask1(PARAM*, int)’:
mask1.cpp:86:43: error: invalid conversion from ‘int’ to ‘int*’ [-fpermissive]
     tcp_send(sock_id, event, strlen(event));
                                           ^
In file included from pvapp.h:18:0,
                 from mask1.cpp:6:
tcputil.h:22:5: error:   initializing argument 1 of ‘int tcp_send(int*, const char*, int)’ [-fpermissive]
 int tcp_send(int *s, const char *msg, int len);
     ^
mask1.cpp:89:42: error: invalid conversion from ‘int’ to ‘int*’ [-fpermissive]
     tcp_rec(sock_id, buf, sizeof(buf) - 1);
                                          ^
In file included from pvapp.h:18:0,
                 from mask1.cpp:6:
tcputil.h:20:5: error:   initializing argument 1 of ‘int tcp_rec(int*, char*, int)’ [-fpermissive]
 int tcp_rec(int *s, char *msg, int len);
     ^
mask1.cpp:67:8: warning: unused variable ‘d’ [-Wunused-variable]
   DATA d;
        ^
mask1.cpp:69:8: warning: unused variable ‘text’ [-Wunused-variable]
   char text[MAX_EVENT_LENGTH];
        ^
mask1.cpp:70:8: warning: unused variable ‘str1’ [-Wunused-variable]
   char str1[MAX_EVENT_LENGTH];
        ^
mask1.cpp:71:8: warning: unused variable ‘i’ [-Wunused-variable]
   int  i,w,h,val,x,y,button,ret;
        ^
mask1.cpp:71:10: warning: unused variable ‘w’ [-Wunused-variable]
   int  i,w,h,val,x,y,button,ret;
          ^
mask1.cpp:71:12: warning: unused variable ‘h’ [-Wunused-variable]
   int  i,w,h,val,x,y,button,ret;
            ^
mask1.cpp:71:14: warning: unused variable ‘val’ [-Wunused-variable]
   int  i,w,h,val,x,y,button,ret;
              ^
mask1.cpp:71:18: warning: unused variable ‘x’ [-Wunused-variable]
   int  i,w,h,val,x,y,button,ret;
                  ^
mask1.cpp:71:20: warning: unused variable ‘y’ [-Wunused-variable]
   int  i,w,h,val,x,y,button,ret;
                    ^
mask1.cpp:71:22: warning: unused variable ‘button’ [-Wunused-variable]
   int  i,w,h,val,x,y,button,ret;
                      ^
mask1.cpp:71:29: warning: unused variable ‘ret’ [-Wunused-variable]
   int  i,w,h,val,x,y,button,ret;
                             ^
mask1.cpp:72:9: warning: unused variable ‘xval’ [-Wunused-variable]
   float xval, yval;
         ^
mask1.cpp:72:15: warning: unused variable ‘yval’ [-Wunused-variable]
   float xval, yval;
               ^
mask1.cpp:73:7: warning: unused variable ‘alive’ [-Wunused-variable]
   int alive;
       ^
mask1.cpp:92:1: warning: no return statement in function returning non-void [-Wreturn-type]
 }
 ^
In file included from mask1.cpp:6:0:
pvapp.h: At global scope:
pvapp.h:14:12: warning: ‘trace’ defined but not used [-Wunused-variable]
 static int trace=1; // todo: set trace=0 if you do not want printf() within event loop
            ^
In file included from mask1.cpp:38:0:
mask1_slots.h:20:12: warning: ‘int slotInit(PARAM*, DATA*)’ defined but not used [-Wunused-function]
 static int slotInit(PARAM *p, DATA *d)
            ^
mask1_slots.h:27:12: warning: ‘int slotNullEvent(PARAM*, DATA*)’ defined but not used [-Wunused-function]
 static int slotNullEvent(PARAM *p, DATA *d)
            ^
mask1_slots.h:33:12: warning: ‘int slotButtonEvent(PARAM*, int, DATA*)’ defined but not used [-Wunused-function]
 static int slotButtonEvent(PARAM *p, int id, DATA *d)
            ^
mask1_slots.h:39:12: warning: ‘int slotButtonPressedEvent(PARAM*, int, DATA*)’ defined but not used [-Wunused-function]
 static int slotButtonPressedEvent(PARAM *p, int id, DATA *d)
            ^
mask1_slots.h:45:12: warning: ‘int slotButtonReleasedEvent(PARAM*, int, DATA*)’ defined but not used [-Wunused-function]
 static int slotButtonReleasedEvent(PARAM *p, int id, DATA *d)
            ^
mask1_slots.h:51:12: warning: ‘int slotTextEvent(PARAM*, int, DATA*, const char*)’ defined but not used [-Wunused-function]
 static int slotTextEvent(PARAM *p, int id, DATA *d, const char *text)
            ^
mask1_slots.h:57:12: warning: ‘int slotSliderEvent(PARAM*, int, DATA*, int)’ defined but not used [-Wunused-function]
 static int slotSliderEvent(PARAM *p, int id, DATA *d, int val)
            ^
mask1_slots.h:63:12: warning: ‘int slotCheckboxEvent(PARAM*, int, DATA*, const char*)’ defined but not used [-Wunused-function]
 static int slotCheckboxEvent(PARAM *p, int id, DATA *d, const char *text)
            ^
mask1_slots.h:69:12: warning: ‘int slotRadioButtonEvent(PARAM*, int, DATA*, const char*)’ defined but not used [-Wunused-function]
 static int slotRadioButtonEvent(PARAM *p, int id, DATA *d, const char *text)
            ^
mask1_slots.h:75:12: warning: ‘int slotGlInitializeEvent(PARAM*, int, DATA*)’ defined but not used [-Wunused-function]
 static int slotGlInitializeEvent(PARAM *p, int id, DATA *d)
            ^
mask1_slots.h:81:12: warning: ‘int slotGlPaintEvent(PARAM*, int, DATA*)’ defined but not used [-Wunused-function]
 static int slotGlPaintEvent(PARAM *p, int id, DATA *d)
            ^
mask1_slots.h:87:12: warning: ‘int slotGlResizeEvent(PARAM*, int, DATA*, int, int)’ defined but not used [-Wunused-function]
 static int slotGlResizeEvent(PARAM *p, int id, DATA *d, int width, int height)
            ^
mask1_slots.h:93:12: warning: ‘int slotGlIdleEvent(PARAM*, int, DATA*)’ defined but not used [-Wunused-function]
 static int slotGlIdleEvent(PARAM *p, int id, DATA *d)
            ^
mask1_slots.h:99:12: warning: ‘int slotTabEvent(PARAM*, int, DATA*, int)’ defined but not used [-Wunused-function]
 static int slotTabEvent(PARAM *p, int id, DATA *d, int val)
            ^
mask1_slots.h:105:12: warning: ‘int slotTableTextEvent(PARAM*, int, DATA*, int, int, const char*)’ defined but not used [-Wunused-function]
 static int slotTableTextEvent(PARAM *p, int id, DATA *d, int x, int y, const char *text)
            ^
mask1_slots.h:111:12: warning: ‘int slotTableClickedEvent(PARAM*, int, DATA*, int, int, int)’ defined but not used [-Wunused-function]
 static int slotTableClickedEvent(PARAM *p, int id, DATA *d, int x, int y, int button)
            ^
mask1_slots.h:117:12: warning: ‘int slotSelectionEvent(PARAM*, int, DATA*, int, const char*)’ defined but not used [-Wunused-function]
 static int slotSelectionEvent(PARAM *p, int id, DATA *d, int val, const char *text)
            ^
mask1_slots.h:123:12: warning: ‘int slotClipboardEvent(PARAM*, int, DATA*, int)’ defined but not used [-Wunused-function]
 static int slotClipboardEvent(PARAM *p, int id, DATA *d, int val)
            ^
mask1_slots.h:129:12: warning: ‘int slotRightMouseEvent(PARAM*, int, DATA*, const char*)’ defined but not used [-Wunused-function]
 static int slotRightMouseEvent(PARAM *p, int id, DATA *d, const char *text)
            ^
mask1_slots.h:136:12: warning: ‘int slotKeyboardEvent(PARAM*, int, DATA*, int, int)’ defined but not used [-Wunused-function]
 static int slotKeyboardEvent(PARAM *p, int id, DATA *d, int val, int modifier)
            ^
mask1_slots.h:142:12: warning: ‘int slotMouseMovedEvent(PARAM*, int, DATA*, float, float)’ defined but not used [-Wunused-function]
 static int slotMouseMovedEvent(PARAM *p, int id, DATA *d, float x, float y)
            ^
mask1_slots.h:148:12: warning: ‘int slotMousePressedEvent(PARAM*, int, DATA*, float, float)’ defined but not used [-Wunused-function]
 static int slotMousePressedEvent(PARAM *p, int id, DATA *d, float x, float y)
            ^
mask1_slots.h:154:12: warning: ‘int slotMouseReleasedEvent(PARAM*, int, DATA*, float, float)’ defined but not used [-Wunused-function]
 static int slotMouseReleasedEvent(PARAM *p, int id, DATA *d, float x, float y)
            ^
mask1_slots.h:160:12: warning: ‘int slotMouseOverEvent(PARAM*, int, DATA*, int)’ defined but not used [-Wunused-function]
 static int slotMouseOverEvent(PARAM *p, int id, DATA *d, int enter)
            ^
mask1_slots.h:166:12: warning: ‘int slotUserEvent(PARAM*, int, DATA*, const char*)’ defined but not used [-Wunused-function]
 static int slotUserEvent(PARAM *p, int id, DATA *d, const char *text)
            ^
mask1.cpp:40:12: warning: ‘int defineMask(PARAM*)’ defined but not used [-Wunused-function]
 static int defineMask(PARAM *p)
            ^
mask1.cpp:49:12: warning: ‘int showData(PARAM*, DATA*)’ defined but not used [-Wunused-function]
 static int showData(PARAM *p, DATA *d)
            ^
mask1.cpp:56:12: warning: ‘int readData(DATA*)’ defined but not used [-Wunused-function]
 static int readData(DATA *d) // from shared memory, database or something else
            ^
make: *** [mask1.o] Error 1
